# planch

./: CMakeLists.txt  README.md  main.cpp  planch.qrc  powerutils.cpp  powerutils.h  window.cpp  window.h
